--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.3",
+    "@testing-library/user-event": "^12.8.1",
     "prop-types": "^15.7.2",
-    "ra-data-json-server": "^3.13.0",
+    "ra-data-json-server": "^3.13.1",
     "react": "^17.0.1",
-    "react-admin": "^3.13.0",
+    "react-admin": "^3.13.1",
     "react-dom": "^17.0.1",
+    "react-script": "^2.0.5",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
